--- a/Webpack/task_2/public/index.html
+++ b/Webpack/task_2/public/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Holberton Dashboard</title>
+  <title>Task 2</title>
 </head>
 <body>
-  <h1>Welcome to the Holberton Dashboard</h1>
-  <script src="bundle.js"></script> <!-- Include the Webpack bundle -->
+  <script src="bundle.js"></script>
 </body>
 </html>
